# m87-stem

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RECEIPT.txt  SECURITY.md  pyproject.toml
.github/workflows/: benchmarks.yml
benchmarks/: README.md  __init__.py  corpus.py  metrics.py  run_benchmarks.py  thresholds.yaml
configs/: default.yaml
models/: README.md
scripts/: launch_ui.bat  launch_ui.sh
src/stemforge/: __init__.py  analysis.py  app.py  cli.py  desktop.py  drum_midi.py  drum_split.py  ingest.py  io_utils.py  midi_melodic.py  orchestrator.py  separate.py  separate_uvr.py  stretch.py  webapp.py
src/stemforge/web/: index.html
src/stemforge/web/assets/: app.js  styles.css
tests/: README.md  conftest.py  test_analysis.py  test_app.py  test_benchmarks.py  test_cli.py  test_config.py  test_desktop.py  test_drum_calibration.py  test_drum_midi_cymbals.py  test_drum_split.py  test_dsp.py  test_h1.py  test_h2v2.py  test_io.py  test_midi_evidence.py  test_pipeline.py  test_rcpt.py  test_separation_backends.py  test_stretch.py  test_tempo_evidence.py  test_webapp.py
